# zphys_analyzer

./: INSTALL.md  README.md  START_HERE.txt  environment.yml  launch_zphys.pyw  pyproject.toml  requirements.txt
docs/: ipf_analysis_mapping.md  ipf_inventory.json  porting_inventory.md  release_0.1.84_portable_package.md  sutterpatch_pxp_notes.md  v10_baseline_persistence_ui.md  v11_sweep_selection_detection_windows.md  v12_stimulus_window_generator.md  v13_ui_cleanup.md  v14_layout_and_paired_windows.md  v15_window_workflow_cleanup.md  v16_window_ui_wording.md  v17_shared_analysis_header.md  v18_ui_polish.md  v19_s2_matching.md  v20_baseline_autoscale.md  v21_common_actions_and_s2.md  v22_checkbox_wordwrap_fix.md  v23_ui_cleanup.md  v24_windows_detect_button.md  v25_compact_numeric_display.md  v26_adaptive_numeric_display.md  v27_two_decimal_adaptive_display.md  v28_compact_top_panel.md  v29_manual_frequency_entry.md  v30_frequency_half_period_compact_header.md  v31_signal_dropdown_fix.md  v32_series_dropdown_fix.md  v33_window_baseline_view_cleanup.md  v34_compact_header_file_status.md  v35_filetools_windows_threshold_scroll.md  v36_filetools_local_output.md  v37_vertical_scroll_fixed_width.md  v38_fixed_width_scroll_threshold.md  v39_analysis_tab_width_fix.md  v3_changes.md  v40_tab_scroll_width_restore.md  v41_dynamic_panel_width.md  v42_draggable_main_splitter.md  v43_stimulus_vs_s2.md  (+44 more)
scripts/: install_conda_mac.command  install_conda_windows.bat  install_mac.command  install_windows.bat  run_mac.command  run_windows.bat
tests/: test_analysis.py
zphys/: app.py  (+7 more)
